Process Hacker

2.34
 * NEW/IMPROVED:
   * Proper Unicode support
   * CPU and GPU graphs are displayed in a grid now (thanks pavel_kv!)
   * Tooltip information for user-mode driver framework (UMDF) host processes
   * Start Task Manager now elevates when necessary
   * Added NetAdapters plugin: adds graphs for selected network adapters to the System Information window
   * Updated ExtendedTools plugin:
     * Can now use the search box in the Disk tab
 * FIXED:
   * Fixed touch scrolling
   * Fixed EtwRegistration object names for 64-bit Windows 8.1
   * Fixed tray icons being clipped in high DPI environments

2.33
 * NEW/IMPROVED:
   * View digital signature information from process properties and peview
   * Signatures for Windows 8 apps are now detected
   * Improved file, key, process and thread handle properties
   * Added DPI Awareness column
   * Added new Windows 8.1 process protection information
   * KProcessHacker is no longer needed for highlighting of GUI threads
   * Added suspend count for threads on Windows 8.1
   * Updated DotNetTools plugin:
     * Improved .NET assembly enumeration timeout handling
 * FIXED:
   * Service start type and error control are never updated if modified outside of Process Hacker

2.32
 * NOTE:
   * All executable files are now signed.
 * NEW/IMPROVED:
   * Updated for Windows 8.1
   * Added progress display for thread stacks
   * Updated ExtendedServices plugin:
     * Added new trigger data types
   * Updated NetworkTools plugin:
     * Updated UI
   * Updated OnlineChecks plugin:
     * Added file analyzed prompt
 * FIXED:
   * Fixed handling of long symbol names
   * Fixed Run As preventing Windows 8 apps from starting
   * Fixed console host information for Windows 8.1
   * Fixed reflected processes not terminating on Windows 8.1
   * Fixed CPU frequency on Windows 8.1

2.31
 * NEW/IMPROVED:
   * Updated ExtendedServices plugin:
     * Fixed some bugs relating to Windows 8
   * Updated OnlineChecks plugin: