@@ -97,7 +97,7 @@ INT WINAPI wWinMain(
 #endif
 
     CoInitializeEx(NULL, COINIT_APARTMENTTHREADED);
-    SetErrorMode(SEM_FAILCRITICALERRORS | SEM_NOOPENFILEERRORBOX);
+    SetErrorMode(SEM_NOOPENFILEERRORBOX);
 
     PhInstanceHandle = (HINSTANCE)NtCurrentPeb()->ImageBaseAddress;
 
