@@ -93,6 +93,7 @@ typedef struct _PH_TREENEW_NODE
 #define TN_STYLE_ANIMATE_DIVIDER 0x8
 #define TN_STYLE_NO_COLUMN_SORT 0x10
 #define TN_STYLE_NO_COLUMN_REORDER 0x20
+#define TN_STYLE_THIN_ROWS 0x40
 
 // Extended flags
 #define TN_FLAG_ITEM_DRAG_SELECT 0x1
